--- a/public/index.html
+++ b/public/index.html
@@ -374,12 +374,12 @@
 					<!-- Image de fond pour la section planning (gérée par CSS) -->
 					<div class="planning-bg"></div>
 
-					<!-- 🚧 CONFIGURATION : Changez "true" en "false" pour désactiver le message de construction -->
+					<!-- CONFIGURATION : Changez "true" en "false" pour désactiver le message de construction -->
 
-					<!-- 🚧 OVERLAY BLUR SUR TOUTE LA SECTION PLANNING -->
+					<!-- OVERLAY BLUR SUR TOUTE LA SECTION PLANNING -->
 					<div class="planning-overlay"></div>
 
-					<!-- 🚧 MESSAGE SITE EN CONSTRUCTION - SUPERPOSÉ SUR LE CALENDRIER -->
+					<!-- MESSAGE SITE EN CONSTRUCTION - SUPERPOSÉ SUR LE CALENDRIER -->
 					<div class="construction-notice">
 						<div class="construction-header">
 							<h3>🚧 Site en construction</h3>
